# FaceOff

./: CMakeLists.txt  README.md
src/: FaceOffConfig.h.in  main.cpp
